[project]
name = "data-engineering-api"
version = "0.1.0"
description = "End-to-end data engineering template for API ingestion using Python, PySpark, Airflow, and a medallion architecture."
authors = [
    {name = "Pedro Gonçalves",email = "pedro_fgo@hotmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.4.1,<3.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "pyspark (==3.5.4)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
